[gd_scene load_steps=36 format=3 uid="uid://b0mt6vx6w303n"]

[ext_resource type="Texture2D" uid="uid://x5anajx8su3o" path="res://pastaplayer/sprites/ExamplePlayerSprite.png" id="1_1ecqo"]
[ext_resource type="Shader" path="res://pastaplayer/player.gdshader" id="1_ha5fu"]
[ext_resource type="Script" path="res://pastaplayer/scripts/player.gd" id="1_mbhoa"]
[ext_resource type="Script" path="res://pastaplayer/scripts/PlayerStateMachine.gd" id="3_wyuf8"]
[ext_resource type="Texture2D" uid="uid://ca3rt5r2j6koe" path="res://pastaplayer/sprites/effects/AttackSprite01 - Copia.png" id="3_xaq8x"]
[ext_resource type="Script" path="res://pastaplayer/scripts/state_idle.gd" id="4_10kn4"]
[ext_resource type="Script" path="res://pastaplayer/scripts/state_walk.gd" id="5_vu3d5"]
[ext_resource type="Script" path="res://pastaplayer/scripts/state_attack.gd" id="6_47ibh"]
[ext_resource type="AudioStream" uid="uid://dfjltgf30rly3" path="res://pastaplayer/sound/SwordSwoosh.wav" id="8_seffx"]
[ext_resource type="PackedScene" uid="uid://cptrrk13abf58" path="res://geral/hurtbox/hurt_box.tscn" id="9_6uggg"]
[ext_resource type="Script" path="res://pastaplayer/scripts/PlayerInteractionHost.gd" id="9_ukgc4"]
[ext_resource type="AudioStream" uid="uid://gom80fg8hkfo" path="res://pastaplayer/sound/sword-sound-2-36274.mp3" id="10_ggbjk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ogxt3"]
resource_local_to_scene = true
shader = ExtResource("1_ha5fu")
shader_parameter/flash_color = Color(1, 0, 0.407843, 1)
shader_parameter/flash_modifier = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g77oh"]
radius = 8.0
height = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tooo8"]
shader = ExtResource("1_ha5fu")
shader_parameter/flash_color = Color(0.635294, 0.631373, 0, 0.745098)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_ngbr6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:show_behind_parent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ngoad"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qvir4"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_32aia"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kv704"]
resource_name = "nothing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qohpi"]
_data = {
"RESET": SubResource("Animation_ngbr6"),
"attack_down": SubResource("Animation_ngoad"),
"attack_side": SubResource("Animation_qvir4"),
"attack_up": SubResource("Animation_32aia"),
"nothing": SubResource("Animation_kv704")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_275cy"]
radius = 20.89

[sub_resource type="Animation" id="Animation_bawdi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kkko1"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [21, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_87oeb"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [26, 28]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, -20)]
}

[sub_resource type="Animation" id="Animation_y0bbv"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [24, 26]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1.03526),
"update": 0,
"values": [Vector2(0, -30)]
}

[sub_resource type="Animation" id="Animation_nxp1k"]
resource_name = "idle_down"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_01uu4"]
resource_name = "idle_down_"
loop_mode = 1

[sub_resource type="Animation" id="Animation_wgwxu"]
resource_name = "idle_side"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6, 8]
}

[sub_resource type="Animation" id="Animation_b3ehj"]
resource_name = "idle_up"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 5]
}

[sub_resource type="Animation" id="Animation_cyt2h"]
resource_name = "morte"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 14]
}

[sub_resource type="Animation" id="Animation_xm4ha"]
resource_name = "walk_down"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.275),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [9, 12]
}

[sub_resource type="Animation" id="Animation_6v31o"]
resource_name = "walk_side"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [17, 20]
}

[sub_resource type="Animation" id="Animation_3i3r8"]
resource_name = "walk_up"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [13, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jokpn"]
_data = {
"RESET": SubResource("Animation_bawdi"),
"attack_down": SubResource("Animation_kkko1"),
"attack_side": SubResource("Animation_87oeb"),
"attack_up": SubResource("Animation_y0bbv"),
"idle_down": SubResource("Animation_nxp1k"),
"idle_down_": SubResource("Animation_01uu4"),
"idle_side": SubResource("Animation_wgwxu"),
"idle_up": SubResource("Animation_b3ehj"),
"morte": SubResource("Animation_cyt2h"),
"walk_down": SubResource("Animation_xm4ha"),
"walk_side": SubResource("Animation_6v31o"),
"walk_up": SubResource("Animation_3i3r8")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
light_mask = 5
visibility_layer = 5
material = SubResource("ShaderMaterial_ogxt3")
position = Vector2(312, 164)
collision_layer = 5
collision_mask = 272
motion_mode = 1
script = ExtResource("1_mbhoa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("CapsuleShape2D_g77oh")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tooo8")
position = Vector2(2, -16)
texture = ExtResource("1_1ecqo")
hframes = 16
vframes = 3

[node name="AttackEffectSprite" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, 10)
texture = ExtResource("3_xaq8x")
hframes = 12
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/AttackEffectSprite"]
libraries = {
"": SubResource("AnimationLibrary_qohpi")
}
autoplay = "nothing"

[node name="AttackHurtBox" parent="Sprite2D" groups=["player"] instance=ExtResource("9_6uggg")]
unique_name_in_owner = true
position = Vector2(0, 26)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
shape = SubResource("CircleShape2D_275cy")
one_way_collision_margin = 0.0
debug_color = Color(0.803922, 0, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jokpn")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_wyuf8")

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource("4_10kn4")

[node name="walk" type="Node" parent="StateMachine"]
script = ExtResource("5_vu3d5")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_47ibh")
attack_sound = ExtResource("8_seffx")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_ggbjk")
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="."]
position = Vector2(2, 0)
script = ExtResource("9_ukgc4")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="morreu" from="." to="StateMachine/walk" method="_on_player_morreu"]
[connection signal="morreu" from="." to="StateMachine/Attack" method="_on_player_morreu"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="reload" from="StateMachine/Attack" to="." method="_on_attack_reload"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
